# Tareas_Repositorio_Esteban_Uriel

./: AUTO.py  Diagrama de clase Persona.py  Felino.java  Felino.py  Neurona Or.py  Persona.java  Practica 2.cpp  Script de base de datos.py  dada.py  flota_autos.db  jbj  public class Persona {.java
Fundamentos/: Arreglos CECA.py  CMakeLists.txt  Funcion Inversa.py  Funcion.py  Matriz pregunta autorelleno.cpp  Matriz pregunta.cpp  U2_A1_Descuentos.py  U2_A2_AnalizarNumeros [PosNeg, Calificacion, Boletos, PPonderado].py  U2_A2_Ejercicios.py  U2_A2_Graficas.py  U2_A4_Codigo_Sumatoria.py  U2_A5_Sumatoria_y_Arreglos.py  U2_A6_Matrices.py  U2_A7_Neurona.py  U2_P2_Practica_4.py  prueba.c
Fundamentos/C-C++/: Funcion inversa.cpp  Funcion.cpp  U2_A10_C++_MatrizRowsColumns.cpp  U2_A11_C++_MatrizEnSerie.cpp  U2_A8_C++_IMC.cpp  U2_A9_C++_Matriz.cpp  U2_T4_C++_Biseccion.cpp  U2_T5_C++_Neurona.cpp
PDF/: Analisis de Requerimientos.docx
Proyecto AVE/: AVE.cpp  Ave main.cpp
